--- a/App.config
+++ b/App.config
@@ -3,6 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<None Include="CompanyBase.db">
+		<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	</None>
 	<System.Windows.Forms.ApplicationConfigurationSection>
 		<add key="DpiAwareness" value="PerMonitorV2" />
 	</System.Windows.Forms.ApplicationConfigurationSection>
